RESOLVED FIXED147896
REGRESSION (r188053): Sometimes unable to save an image from Google Search/imgur via long press
https://bugs.webkit.org/show_bug.cgi?id=147896
Summary REGRESSION (r188053): Sometimes unable to save an image from Google Search/im...
Beth Dakin
Reported 2015-08-11 13:14:43 PDT
Sometimes unable to save an image from Google Search/imgur via long press Regression from http://trac.webkit.org/changeset/188053
Attachments
Patch (3.99 KB, patch)
2015-08-11 13:25 PDT, Beth Dakin
enrica: review+
Beth Dakin
Comment 1 2015-08-11 13:25:37 PDT
Enrica Casucci
Comment 2 2015-08-11 13:33:59 PDT
Comment on attachment 258747 [details] Patch Looks good to me. Thanks for fixing this!
Beth Dakin
Comment 3 2015-08-11 13:36:44 PDT
Beth Dakin
Comment 4 2015-08-11 13:42:17 PDT
Note You need to log in before you can comment on or make changes to this bug.