Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm
@@ -206,7 +206,6 @@ static LSAppLink *appLinkForURL(NSURL *url)
 
 - (void)_createSheetWithElementActions:(NSArray *)actions showLinkTitle:(BOOL)showLinkTitle
 {
-    ASSERT(!_interactionSheet);
     auto delegate = _delegate.get();
     if (!delegate)
         return;
@@ -263,7 +262,6 @@ static LSAppLink *appLinkForURL(NSURL *url)
 
 - (void)showImageSheet
 {
-    ASSERT(!_interactionSheet);
     ASSERT(!_elementInfo);
 
     auto delegate = _delegate.get();
@@ -373,7 +371,6 @@ static LSAppLink *appLinkForURL(NSURL *url)
 
 - (void)showLinkSheet
 {
-    ASSERT(!_interactionSheet);
     ASSERT(!_elementInfo);
 
     auto delegate = _delegate.get();
@@ -406,8 +403,6 @@ static LSAppLink *appLinkForURL(NSURL *url)
 
 - (void)showDataDetectorsSheet
 {
-    ASSERT(!_interactionSheet);
-
     auto delegate = _delegate.get();
     if (!delegate)
         return;
